[tool.poetry]
name = "cyber-analysis"
version = "0.1.0"
description = ""
authors = ["Gustavo Araujo <gala.gustavoantonio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
numpy = "^1.23.3"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
wordcloud = "^1.8.2"
jupyter = "^1.0.0"
lab = "^7.1"
PyPDF2 = "^2.11.0"
ipykernel = "^6.16.0"
spacy = "^3.4.1"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
streamlit = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
